--- a/src/resources/image/tarot/TarotImages/A1Hexagram.html
+++ b/src/resources/image/tarot/TarotImages/A1Hexagram.html
@@ -111,9 +111,14 @@
     </style>
 </head>
 <body>
+        <!-- 新增标题 -->
+
     <div class="star-container">
 
         <!-- 2. 现在 -->
+        <div style="text-align: center; margin-top: -35%;">
+            <h1 style="color: #d4af37; font-size: 3em; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">六星芒星塔罗牌阵</h1>
+        </div>
         <div class="card" id="card1">
             <img src="{{data[1].image}}" >
             <h3>{{data[1].name}}</h3>
