feat： 添加 data_base 模块，用于处理音乐搜索和图像生成

--- a/src/clover_html/daily_report/main.html
+++ b/src/clover_html/daily_report/main.html
@@ -78,7 +78,7 @@
                 </ul>
             </div>
             <div class="five-border">
-                <div class="moyu-title" style="left: -3px;"><img src="./res/icon/hitokoto.png" class="title-img">今日一言
+                <div class="moyu-title" style="left: -3px;"><img src="../res/icon/hitokoto.png" class="title-img">今日一言
                 </div>
                 <p style="margin-top: 5px;margin-bottom: 5px;">“{{data.data_hitokoto}}”</p>
             </div>
