更新天气模块，添加天气信息展示页面及相关样式

--- a/src/clover_html/daily_report/main.html
+++ b/src/clover_html/daily_report/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Test</title>
+    <title>日报</title>
     <link rel="stylesheet" href="main.css">
 </head>
 
