--- a/src/clover_html/BH3/VALKYRIES.html
+++ b/src/clover_html/BH3/VALKYRIES.html
@@ -150,8 +150,9 @@ h1 {
                         <p>{{item.title}}</p>
                     </div>
                     <div class="item_bottom">
-                        {% if item.obtain_tiem %}
-                            <p style="text-align: center;margin: 2px 0 0 0;font-size: 0.6rem;">({{item.obtain_tiem}})</p>
+                        <p style="text-align: center;margin: 2px 0 0 0;font-size: 0.6rem;">ID: {{item.content_id}}</p>
+                        {% if item.obtain_time %}
+                            <p style="text-align: center;margin: 2px 0 0 0;font-size: 0.6rem;">({{item.obtain_time}})</p>
                         {% else %}
                             <p style="text-align: center;margin: 2px 0 0 0;font-size: 0.6rem;">(暂未获得)</p>
                         {% endif %}
