tuning(VALKYRIES.html): 修改获取时间和未获得状态的文本颜色以增强可读性

--- a/src/clover_html/BH3/VALKYRIES.html
+++ b/src/clover_html/BH3/VALKYRIES.html
@@ -152,9 +152,9 @@ h1 {
                     <div class="item_bottom">
                         <p style="text-align: center;margin: 2px 0 0 0;font-size: 0.6rem;">ID: {{item.content_id}}</p>
                         {% if item.obtain_time %}
-                            <p style="text-align: center;margin: 2px 0 0 0;font-size: 0.6rem;">({{item.obtain_time}})</p>
+                            <p style="text-align: center;margin: 2px 0 0 0;font-size: 0.6rem;color: #8b0000;">({{item.obtain_time}})</p>
                         {% else %}
-                            <p style="text-align: center;margin: 2px 0 0 0;font-size: 0.6rem;">(暂未获得)</p>
+                            <p style="text-align: center;margin: 2px 0 0 0;font-size: 0.6rem;color: #555555;">(暂未获得)</p>
                         {% endif %}
                     </div>
                 </div>
