feat: 完善功能     1. /我的助理 <角色名称/角色ID>查看我的角色信息（详细获取时间、好感） √     2. /今日助理 <角色名称/角色ID>设定每日助理角色且增加好感 √     3. /今日助理 指令在已获取今日助理状态下展示设定的助理角色信息 √

--- a/src/clover_html/BH3/VALKYRIES.html
+++ b/src/clover_html/BH3/VALKYRIES.html
@@ -141,7 +141,7 @@ h1 {
 <body>
     <div class="wrapper">
         <div class="box">
-            <h1>女武神图鉴</h1>
+            <h1>{{title}}</h1>
             <div class="content_box">
             {% for item in data %}
                 <div class="item_box">
