--- a/src/clover_html/BH3/valkyrie.html
+++ b/src/clover_html/BH3/valkyrie.html
@@ -63,6 +63,7 @@
             display: flex;
             justify-content: flex-end;
             flex-wrap: wrap;
+            color: #cfcfcf;
         }
 
         .property-item {
