--- a/src/clover_html/BH3/valkyrie.html
+++ b/src/clover_html/BH3/valkyrie.html
@@ -120,7 +120,7 @@
 
 <body>
     <div class="character-container">
-        <img src="{{data.img_link}}" alt="{{data.title}}" class="character-img">
+        <img src="{{img_link}}" alt="{{data.title}}" class="character-img">
         <div class="character-info">
             <h1>{{data.name}}</h1>
             <h2>{{data.title}}</h2>
