feat(cloud_music): 优化点歌功能并添加歌曲选择交互
- 修改了点歌指令的使用方式，现在用户只需回复歌曲序号即可
- 增加了异步等待用户选择的功能，提升了交互体验
- 更新了帮助信息，使用户更清晰地了解如何使用点歌功能
- 优化了代码结构，提高了可读性和可维护性

--- a/src/clover_html/cloud_music/main.html
+++ b/src/clover_html/cloud_music/main.html
@@ -26,8 +26,8 @@
             </div>
             <div class="bottom">
                 <div class="bottom-left">
-                    <p>你可以发送：/点歌 歌曲名 序号 择歌曲</p>
-                    <p>例如：/点歌 True-黄龄 1</p>
+                    <p>请直接回复要听的歌曲序号哦！(1-10)</p>
+                    <p>例如：1</p>
                 </div>
                 <div class="bottom-right">
                     <p>By Elysia Bot</p>
